# nanohype

./: .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  catalog.json  package-lock.json  package.json
.github/: pull_request_template.md
.plans/: k8s-templates.md
composites/: agent-team.yaml  ai-chatbot.yaml  ai-platform.yaml  ai-web-app.yaml  background-processor.yaml  chrome-ai-extension.yaml  client-engagement.yaml  cost-optimized-ai.yaml  document-intelligence.yaml  enterprise-ai.yaml  eval-suite.yaml  go-microservice.yaml  identity-aware-service.yaml  internal-tool.yaml  mcp-toolkit.yaml  multi-agent.yaml  platform-tenant.yaml  product-launch.yaml  production-api.yaml  proof-of-concept.yaml  rag-agent.yaml  research-to-prototype.yaml  safe-ai-agent.yaml  spring-boot-microservice.yaml  vscode-ai-extension.yaml
docs/: authoring-guide.md  catalog.md  composites-guide.md  github-metadata.md  platform-reference-pattern.md  platform-reference.md  production-readiness.md  (+1 more)
templates/mcp-server-python/skeleton/: .env.example  .gitignore  README.md  pyproject.toml
templates/mcp-server-python/skeleton/src/: config.py  logger.py  main.py  server.py
templates/mcp-server-python/skeleton/src/resources/: example.py  registry.py
templates/mcp-server-python/skeleton/src/tools/: example.py  registry.py
templates/mcp-server-python/skeleton/src/transports/: http.py  stdio.py
templates/mcp-server-python/skeleton/tests/: conftest.py  test_server.py  test_tools.py
(+1706 files in other folders)
