[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "__PROJECT_NAME__"
version = "0.1.0"
description = "__DESCRIPTION__"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "structlog>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.0",
    "black>=25.1.0",
]

[project.scripts]
__PROJECT_NAME__ = "src.main:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
